CloudConsulting/force-app/main/default/objects/Task__c/fields/EstimatedHours__c.field-meta.xml
<CustomField>
    <fullName>EstimatedHours__c</fullName>
    <label>EstimatedHours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>