CloudConsulting/force-app/main/default/objects/Task__c/fields/ListView__c.field-meta.xml
<CustomField>
    <fullName>ListView__c</fullName>
    <formula>IF( Project_Resource__r.User__r.Id = $User.Id , &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ListView</label>
    <type>Text</type>
</CustomField>