CloudConsulting/force-app/main/default/objects/Task__c/fields/WorkedHours__c.field-meta.xml
<CustomField>
    <fullName>WorkedHours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>WorkedHoursTask</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>