CloudConsulting/force-app/main/default/objects/Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>Description__c</columns>
    <columns>EstimatedHours__c</columns>
    <columns>Project_Resource__c</columns>
    <columns>WorkedHours__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>