CloudConsulting/force-app/main/default/objects/Task__c/listViews/Completed_Task.listView-meta.xml
<ListView>
    <fullName>Completed_Task</fullName>
    <columns>Description__c</columns>
    <columns>Project_Resource__c</columns>
    <columns>Status__c</columns>
    <columns>EstimatedHours__c</columns>
    <columns>WorkedHours__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>ListView__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <label>Completed Task</label>
</ListView>